--- a/student/student_app/templates/user/user_list.html
+++ b/student/student_app/templates/user/user_list.html
@@ -1,3 +1,11 @@
+<style>
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+  text-align:center;
+}
+</style>
+
 <h3> All Users </h3>
 
 {% if messages %}
@@ -8,7 +16,7 @@
 </ul>
 {% endif %}
 
-<table>
+<table style="width:60%">
     <thead>
         <th>name</th>
         <th>Email</th>
