--- a/student/student_app/templates/user/register.html
+++ b/student/student_app/templates/user/register.html
@@ -3,11 +3,11 @@
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     <label for="email">Email</label>
-    <input type="email" id="email" name="email" placeholder="Your Email Address"><br><br>
+    <input type="email" id="email" name="email" placeholder="Your Email Address" required><br><br>
     <label for="password">Password</label>
-    <input type="password" id="password" name="password" placeholder="Password"><br><br>
+    <input type="password" id="password" name="password" placeholder="Password" required><br><br>
     <label for="dob">Date of Birth</label>
-    <input type="date" id="dob" name="dob" placeholder="Date of Birth"><br><br>
+    <input type="date" id="dob" name="dob" placeholder="Date of Birth" required><br><br>
     <label for="username">User_Name</label>
     <input type="text" id="username" name="username" placeholder="User Name"><br><br>
     <label for="father_name">Father_Name</label>
