register function modified

--- a/student/student_app/templates/user/register.html
+++ b/student/student_app/templates/user/register.html
@@ -21,9 +21,9 @@
     <label for="photo">Photo</label>
     <input type="file" id="photo" name="photo" placeholder="Photo"><br><br>
     <label for="ssc_marks">SSC Mark</label>
-    <input type="text" id="ssc_marks" name="ssc_marks" placeholder="Your Email Address"><br><br>
+    <input type="number" id="ssc_marks" name="ssc_marks" placeholder="SSC Marks" value=0><br><br>
     <label for="inter_marks">Inter_Marks</label>
-    <input type="text" id="inter_marks" name="inter_marks" placeholder="Your Email Address"><br><br>
+    <input type="number" id="inter_marks" name="inter_marks" placeholder="Inter Marks" value=0><br><br>
     <button type="submit">Submit</button>
 
 
